2008-06-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing segfaults on exit.
	* actors.cc: Fixed checks that were failing due to operator precedence.
	* effects.cc: Fixed crash on using Death Vortex/Energy Mist. Fixed Death
	  Vortex and Energy Mist.
	* monsters.cc: Fixed carpet-filled monster inventory bug.
	* shapes/shapeinf.cc: Correctly initializing monster food value.
	* Fixing reagents mismatches between Exult and original games.
	* Fixed ammo counting bug causing some ranged weapons to not be found.
	  Improved attacking when switching dead weapon.

2008-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	BIG Commit (TM). Quite likely, there are a lot of bugs.
	* Version bump to 1.04.05cvs due to massive internal changes and also due to
	  the fact that pre-1.04.05cvs animation data is INCOMPATIBLE with CVS head
	  and WILL NOT WORK. Also, pre-1.04.05cvs versions of Exult WILL CHOKE and
	  most likely die with this new data.
	* Warning: previous versions of Exult Studio lost information when it saved
	  weapons.dat, monsters.dat and ammo.dat data files. There is a command to
	  fix this by reloading the static data; this will only affect shapes that
	  had this data in the original: the Death Scythe would be reset, but if you
	  gave weapon data to a door, it would not be reset.
	* msvcstuff/*: Added new files to projects.
	* Makefile.mingw: 'turbo', configurable makefile. Command-line parameters
	  or environment variables can now be used to specify the workings of a
	  MinGW compilation.
	* De-hard-coded data:
	  - What items are lightweight (i.e., weight 1/10 normal) such as coins;
	  - What items have quantity-dependent frames (e.g., arrows);
	  - What items constitute 'locked' containers (such as locked chests);
	  - What items are volatile explosives (such as the powder keg);
	  - The frame of food items (shape 377) dropped by monsters;
	  - Creatures which don't eat;
	  - Creatures immune to freezing;